# pyproject_installer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.claude/: CLAUDE.md
.github/workflows/: pipelines.yml
backend/: __init__.py  common.py  config.py  metadata.py  sdist.py  vendored.txt  wheel.py
docs/designs/: bash_completion.md  change_dir_option.md  deps_add_candidates.md  deps_add_reconfigure_and_sync.md  deps_add_sources.md  deps_cmd.md  exclude_paths_option.md  logging_streams_and_status.md  metadata_cache.md  metadata_extra_collector.md  platlib_purelib_options.md  rpm_filelist_option.md  run.md  verify_ignore_version_option.md
src/pyproject_installer/: __main__.py  codes.py  errors.py  vendored.txt
src/pyproject_installer/build_cmd/: __init__.py  _build.py
src/pyproject_installer/build_cmd/helper/: backend_caller.py
src/pyproject_installer/completion_cmd/: __init__.py  _autocomplete.py  _bash.py
src/pyproject_installer/deps_cmd/: __init__.py  _deps_command.py  deps_config.py
src/pyproject_installer/deps_cmd/collectors/: __init__.py  collector.py  hatch.py  metadata.py  metadata_extra.py  pdm.py  pep517.py  pep518.py  pep735.py  pip_reqfile.py  pipenv.py  poetry.py  tox.py
src/pyproject_installer/deps_cmd/parsers/: __init__.py  metadata.py  parser.py  pep517.py  pep518.py  pip_reqfile.py
src/pyproject_installer/install_cmd/: __init__.py  _exclude_paths.py  _install.py  _rpm_filelist.py
src/pyproject_installer/lib/: __init__.py  build_backend.py  entry_points.py  normalization.py  scripts.py  wheel.py
src/pyproject_installer/lib/backend_helper/: backend_caller.py
src/pyproject_installer/run_cmd/: __init__.py  _run_command.py  _run_env.py
tests/: conftest.py
tests/integration/: conftest.py  test_backends.py  test_buildable.py  test_config_settings.py  test_rpm_filelist.py
tests/unit/: test_main.py  test_version.py
tests/unit/test_build/: conftest.py  test_backend_caller.py  test_builder.py  test_pyproject_parser.py
tests/unit/test_completion/: test_autocomplete.py  test_autocomplete_parser.py  test_bash.py  test_completion.py  test_path_metavars.py
tests/unit/test_deps/: conftest.py  test_collectors.py  test_deps_add.py  test_deps_config.py
tests/unit/test_deps/test_collectors/: conftest.py  test_collectors.py  test_hatch.py  test_metadata.py  test_metadata_extra.py  test_pdm.py  test_pep517.py  test_pep518.py  test_pep735.py  test_pip_reqfile.py  test_pipenv.py  test_poetry.py  test_tox.py
tests/unit/test_install/: test_installer.py
tests/unit/test_run/: test_env.py
tools/: changelog.py  vendored.py
